--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity android:name=".CategoryList"></activity>
         <activity android:name=".WebSearch" />
         <activity android:name=".SearchSocialMedia" />
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".MainActivity">
           
             <intent-filter>
